--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" href="/styles.css">
       <nav>
         <ul >
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./index.html">About Me</a></li>
         </ul>
       </nav>
     </header>
