updates to full site

--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
-<h1>Welcome to WDD130 Web Projects</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="/styles//style.css">
+  <title>Adam Ulrich's WDD130 page.</title>
+
+</head>
+<body>
+  <h1>Welcome to WDD130 Web Projects</h1>
+
 <nav>
-  <a href="aboutme/index.html">About Me Page</a>             
-  <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
+  <div class="about">
+    <img src="/images/AdamU.png">
+    <a href="aboutme/index.html">About Adam</a>
+  </div>
+  <div class="wwr">
+    <img src="wwr/images/DRY OAR.png">
+    <a href="wwr//week_7/index.html">White Water Rafting Website</a>
+  </div>
+  <div class="wwr">
+    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  </div>
+  <div class="positioning">
+    <a  href="positioning.html">Positioning Activity</a>
+  </div>
+  <div class = "project_image">
+    <img src="/project/images/DuoDocksLogo-Transparent.png">
+  </div>  
+  <div class="project1">
+    <a href="/project/index.html">DuoDocks Project Website</a>
+  </div>
+  <div class="project2">
+    <a  href="/project/site-plan.html">DuoDocks Project Siteplan</a>
+  </div>
 </nav>
+</body>
+</html>
