--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="/styles//style.css">
+  <link type="text/css" rel="stylesheet" href="styles//style.css">
   <title>Adam Ulrich's WDD130 page.</title>
 
 </head>
@@ -13,7 +13,7 @@
 
 <nav>
   <div class="about">
-    <img src="/images/AdamU.png">
+    <img src="images/AdamU.png">
     <a href="aboutme/index.html">About Adam</a>
   </div>
   <div class="wwr">
@@ -27,13 +27,13 @@
     <a  href="positioning.html">Positioning Activity</a>
   </div>
   <div class = "project_image">
-    <img src="/project/images/DuoDocksLogo-Transparent.png">
+    <img src="project/images/DuoDocksLogo-Transparent.png">
   </div>  
   <div class="project1">
-    <a href="/project/index.html">DuoDocks Project Website</a>
+    <a href="project/index.html">DuoDocks Project Website</a>
   </div>
   <div class="project2">
-    <a  href="/project/site-plan.html">DuoDocks Project Siteplan</a>
+    <a  href="project/site-plan.html">DuoDocks Project Siteplan</a>
   </div>
 </nav>
 </body>
