--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -14,11 +14,10 @@
       <h1>DuoDocks.com Site Plan</h1>
       <h2>Adam Ulrich</h2>
       <h2>WDD 130-[section]</h2>
-      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+
     </header>
     <main>
 
-      <!-- ------------------------Steps 2-3------------------------------ -->
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
@@ -26,12 +25,11 @@
 
 
       <h3>Audience</h3>
-      <p>Surface Duo Users</p>  <!-- change this -->
+      <p>Surface Duo Users</p>
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img src="images/DuoDocksLogo.png" alt="Logo image">
       <img src="images/DuoDocksLogo-Transparent.png" alt="Transparent Logo image">
       <hr>
@@ -39,16 +37,10 @@
         Style Guide
       </h2>
 
-      <!-- ------------------------Steps 4-8------------------------------ -->
-
       <h3>
         Color Palette
       </h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       Palette URL: <a href="https://coolors.co/palette/582f0e-7f4f24-936639-a68a64-b6ad90-c2c5aa-a4ac86-656d4a-414833-333d29" target="_blank">https://coolors.co/palette/582f0e-7f4f24-936639-a68a64-b6ad90-c2c5aa-a4ac86-656d4a-414833-333d29</a>
-
 
       <table class="colors">
         <tr>
@@ -69,18 +61,17 @@
         </tr>
       </table>
 
-      <!-- ------------------------Step 9------------------------------ -->
+
 
       <h3>
         Typography
       </h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Dosis  <!-- change this -->
+        Heading Font: Dosis 
       </h4>
       <h4>
-        Paragraph Font: Lato  <!-- change this -->
+        Paragraph Font: Lato
       </h4>
       <h3>
         Normal paragraph example
@@ -95,12 +86,10 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
 
       <h3>
         Navigation
       </h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
         <a href="#">Page2</a>
@@ -115,10 +104,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Page2] 
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [Page3] 
         </div>
 
         <div class="top">
@@ -133,7 +122,6 @@
 
       </div>
 
-      <!-- --------Content Section -------------- -->
       <hr>
       <h2>
         Content
@@ -146,7 +134,6 @@
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
-      </ul>
       <h3>[Page 2]</h3>
       <p>
         [Written copy for the Page 2 here]
@@ -155,7 +142,6 @@
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
-      </ul>
       <h3>[Page 3]</h3>
       <p>
         [Written copy for the Page 3 here]
@@ -164,7 +150,6 @@
         <img src="#" alt="image for page3">
         <img src="#" alt="image for page3">
 
-      </ul>
       <hr>
       <h2>
         Wireframes
