--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
 
 </head>
 <body>
-  <h1>Welcome to WDD130 Web Projects</h1>
+  <h1>Welcome to Adam's WDD130 Home Page</h1>
 
 <nav>
   <div class="about">
     <img src="images/AdamU.png">
     <a href="aboutme/index.html">About Adam</a>
   </div>
-  <div class="wwr">
+  <div class="wwr_image">
     <img src="wwr/images/DRY OAR.png">
+  </div>
+  <div class="wwr1">
     <a href="wwr//week_7/index.html">White Water Rafting Website</a>
   </div>
-  <div class="wwr">
+  <div class="wwr2">
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   </div>
-  <div class="positioning">
-    <a  href="positioning.html">Positioning Activity</a>
+  <div class="positioning_image">
+    <img src="images/positioning.png">
+  </div>
+  <div class="positioning1">
+    <a href="positioning.html">Positioning Activity</a>
   </div>
   <div class = "project_image">
     <img src="project/images/DuoDocksLogo-Transparent.png">
