--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -1,30 +1,30 @@
-<html>
-  <head>
-    <title>All About Me</title>
-  </head>
-  <body>
-    <header>
-      <link rel="stylesheet" href="/styles.css">
-      <nav>
-        <ul >
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./index.html">About Me</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <!-- Your code goes here -->
-      <h1>About Me</h1>
-      <h2>Adam Ulrich</h2>
-      <h3 >AdamU</h3>
+<!DOCTYPE html>
+<html lang="en">
 
-      <img
-        alt="A picture of me and my family."
-        src="images/UlrichFamily-20.jpg"
-        height="480"
-        width="640"
-      />
-      <h2></h2>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Hey There, I'm Adam.</title>
+</head>
+<html>
+<body>
+  <main class = "grid-home">
+    <div class="profile">
+      <img alt="bitmoji" src="images/thinking.png">
+    </div>
+    <div class="banner">
+      <h1>Hey There, I'm Adam.</h1>
+      <h2>Adam Ulrich, to be exact.</h2>
+    </div>
+    <div class = "home">
+      <a href="../index.html">Home</a>
+    </div>
+    <div class="family">
+      <img alt="A picture of me and my family." src="images/UlrichFamily-20.jpg" height="480" width="640" />
+    </div>
+    <div class = "main_text">
       <p>
         I've been married for 34 years, and have 6 children that are mostly
         adults. I've started 3 companies, and I spent 10 years in the Nuclear
@@ -32,17 +32,6 @@
         with 22 years at Microsoft, and currently 3+ years at Tableau. I started
         as an engineer, and have been an engineering manager for 20 years.
       </p>
-      <p>
-        In my spare time, I read, watch movies, and listen to my kids amazing
-        musical talents.
-      </p>
-      <a href="https://www.youtube.com/watch?v=uk68OhWOu7s"
-        ><b>Jackson Ulrich</b> - No One is Dancing Tonight</a
-      ><br />
-      <a href="https://www.youtube.com/watch?v=54jsBiGbR6I"
-        ><b>Garrison Ulrich</b> - I Will Never Not Love You</a
-      >
-
       <p>
         I became a member of the Church at age 19. I currently serve as the Ward
         Clerk for my ward. In the last decade, I've had the privilege to serve
@@ -56,7 +45,17 @@
         much of the 100 classes will be review for me. I look forward to filling
         in the gaps in my knowledge.
       </p>
-    </main>
-  </body>
+    </div>
+    <div class = "footer">
+      <p>
+        In my spare time, I read, watch movies, and listen to my kids amazing
+        musical talents.
+      </p>
+      <a href="https://www.youtube.com/watch?v=uk68OhWOu7s"><b>Jackson Ulrich</b> - No One is Dancing Tonight</a><br />
+      <a href="https://www.youtube.com/watch?v=54jsBiGbR6I"><b>Garrison Ulrich</b> - I Will Never Not Love You</a>
+      <br><br>
+    </div>
+  </main>
+</body>
+
 </html>
-`
