--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -22,7 +22,7 @@
       <a href="../index.html">Home</a>
     </div>
     <div class="family">
-      <img alt="A picture of me and my family." src="images/UlrichFamily-20.jpg" height="480" width="640" />
+      <img alt="A picture of me and my family." src="images/UlrichFamily-20.jpg" max-height="480" max-width="640" />
     </div>
     <div class = "main_text">
       <p>
