--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -21,11 +21,22 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>My son and I run a small business that designs and manufacturers custom phone docking stations for niche markets. We grossed $14,000 in sales last year, and anticipate a bigger year this year with an improved product and new customers with new a new device launch. We use a SquareSite (https://duodocks.square.site/) from Square to sell our product and handle all the payments, but would like to build a website that showcases our product better: through pictures and video, with customer testimonials, that can tell a better story for our products, as well as share our company vision and contact information. We feel this will dramatically improve perception and customer pull-through to the square site.</p>  <!-- change this -->
-
+      <p>My son and I run a small business that designs and manufacturers custom phone 
+        docking stations for niche markets. We grossed $14,000 in sales last year, and 
+        anticipate a bigger year this year with an improved product and new customers 
+        with new a new device launch. We use a SquareSite (https://duodocks.square.site/) 
+        from Square to sell our product and handle all the payments, but would like to build 
+        a website that showcases our product better: through pictures and video, with 
+        customer testimonials, that can tell a better story for our products, as well 
+        as share our company vision and contact information. We feel this will dramatically 
+        improve perception and customer pull-through to the square site.</p>  
 
       <h3>Audience</h3>
-      <p>Surface Duo Users</p>
+      <p>The audience for this site is a niche market of cell phone users/owners; 
+        those who have purchased, or are considering a purchase, of a Microsoft 
+        Surface Duo or a Surface Duo 2. There is no comparable product on the market today, 
+        and so we fulfill a specific need within this community. There are several facebook/reddit 
+        community groups and youtube channels that are dedicated to this group that we target.</p>
 
       <hr>
       <h2>Branding</h2>
