--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -13,35 +13,27 @@
     <h1>Dry Oar Site Plan</h1>
     <h2>Adam Ulrich</h2>
     <h2>WDD 130-19</h2>
-    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>Rafting is for many people a once in a lifetime experience. For others, it's a staple of their outdoor experience. 
         It is exhilarating and awe inspiring. And regardless of your experience level, we want to be your destination for rafting. The purpose of this web site is to inform, educate and engage potential customers.</p>
-    <!-- change this -->
 
     <h3>Audience</h3>
     <p>Our audience is both the experienced and the newbie customer. We specialize in team building events.</p>
-    <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/DRY OAR.png" alt="Logo image" />
+
+    <img src="images/DRY_OAR.png" alt="Dry Oar Logo" />
     <hr />
     <h2>Style Guide</h2>
 
-    <!-- ------------------------Steps 6-9------------------------------ -->
 
     <h3>Color Palette</h3>
-    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
     <a href="https://coolors.co/293043-e7e7ea-f1ab33-ffffff-393d75"
       target="_blank">https://coolors.co/293043-e7e7ea-f1ab33-ffffff-393d75</a>
@@ -54,7 +46,7 @@
         <th>Accent 2</th>
         <th>Accent 3</th>
       </tr>
-      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+
       <tr>
         <td class="primary">[#293043]</td>
         <td class="secondary">[#e7e7ea]</td>
@@ -65,18 +57,14 @@
       </tr>
     </table>
 
-    <!-- ------------------------Steps 10-12------------------------------ -->
 
     <h3>Typography</h3>
-    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
     
     <h4>
       Heading Font: Trebuchet MS
-      <!-- change this -->
     </h4>
     <h4>
       Paragraph Font: Arial
-      <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
@@ -93,7 +81,6 @@
       happen for you.
     </p>
 
-    <!-- ------------------------Step 13------------------------------ -->
 
     <h3>Navigation</h3>
     <nav>
@@ -107,7 +94,6 @@
       <div class="sm-home">Home</div>
       <div class="sm-page2">
         Rivers
-        <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
 
@@ -117,7 +103,6 @@
     </div>
     <hr />
     <h2>Wireframes</h2>
-    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
@@ -125,7 +110,7 @@
 
     <h3>Rivers</h3>
 
-    <img src="images/Rivers_wireframe.png" alt="page 2 wireframe">
+    <img src="images/Rivers_wireframe.png" alt="rivers wireframe">
   </main>
 </body>
 
