updates for siteplan

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -38,6 +38,9 @@
         and so we fulfill a specific need within this community. There are several facebook/reddit 
         community groups and youtube channels that are dedicated to this group that we target.</p>
 
+
+
+
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
@@ -115,10 +118,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] 
+          Contact Us 
         </div>
         <div class="sm-page3">
-          [Page3] 
+          Reviews 
         </div>
 
         <div class="top">
@@ -137,25 +140,119 @@
       <h2>
         Content
       </h2>
+      <b>The Why</b>
+      <P>People will come to our site because it will be the landing page for our domain, 
+        and we will publish it on all our social media feeds, and ask reviewers to link to it. 
+        We will back-link from our e-commerce site at square to this page to provide additional information. </P>
+
+      <b>The How</b>
+      <p>To increase sales, we want to increase customer confidence in our product. To do this we will:</p> 
+        <ul>
+          <li>present a professional image</li>
+          <li>content that demonstrates the benefits of our product.</li>
+          <li>Encourage purchasing with direct links into square for purchasing.</li>
+        </ul>
+      <p></p>
+      <b>Professional Image</b>
+      <p>Customers expect e-commerce websites to look polished. If something in the quality of the experience
+        on the website isn't right, then it will impact their confidence.</p>
+
+        <ul>
+          <li>We will provide high quality images of our products. We want to demonstrate</li>
+            <ul>
+              <li>Functionality</li>
+              <li>Quality</li>
+              <li>Color selection</li>
+            </ul>
+          <li>We will provide a video of the product in action.</li>
+          <li>We will provide links to customer and influencer reviews.</li>
+        </ul>
+        
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
+
+      <p>The DuoDock is a bespoke product, design exclusively to work with the Microsoft Surface Duo and Surface Duo 2. 
+        It is the only dock/charging stand on the market designed to fast charge your Duo, while allowing you to interact 
+        with it at the perfect angle. Its thoughtful design supports all the various configurations of bumpers and covers, 
+        without buying anything additional. Small touches include:  notches for proper alignment, proper height for swipe gestures, 
+        and storage for your pen.</p>
+  
+        <ul>
+          <li>Full PD100 charging (5V @ 20Amp)</li>
+          <li>Full USB 3.1 Connectivity supporting video and data.</li>
+          <li>Includes Pen storage.</li>
+          <li>Multiple colors available</li>
+          <li>Supports all bumper/cover configurations.</li>
+          <li>Great design.</li>
+            <ul>
+              <li>Stable and non-slip.</li>
+              <li>Solid/Substantial, weighing 4oz</li>
+            </ul>
+        </ul>
+        <p></p>
+        <b>Accessories</b>
+        <p></p>
+        <ul>
+          <li>6 inch right angle cable.</li>
+          <li>1.5 meter USB-C to USB-C magnetic cable (adapter included)</li>
+        </ul>
+      <p></p>
+  <b>Encourage Purchasing</b>
+  </br>
+  <p>Each image on our site will be a unique color and design. Each image will link 
+    directly to the square site to place this item in their cart.</p>
+
+    <b>Provide Product costs</b>
+    <br><br>
+    <ul>
+      <li>USB-C DuoDock 2</li>
+      <li>USB-C DuoDock $40</li>
+      <li>Magnetic DuoDock $45</li>
+      <li>Magnetic Cable 1.5M</li>
+    </ul>
+  <br><br>
+  <P>  People will want to perform the following activities:</P>
+  <ul>
+    <li>Research our products (main page)</li>
+    <li>Purchase our products (main page link to store)</li>
+    <li>Contact us for questions or support (contact page) </li>
+    <li>Find out more about what other people think about our products (FAQ / Reviews) </li>
+    <li>Understand pricing and shipping costs/options (FAQ / Reviews)</li>
+    <li>Unsub from our mailing list. (contact us)</li>
+  
+  <p></p>
+  <b>Links / FAQ</b>
+    <p></p>Customers will want to know what influencers think about our product.
+      links to reviews:
+    
+      Pricing/Shipping
+
+    Customers will want to know if we ship to their country, and what the cost is. 
+    Shipping
+      $5 flate rate for US shipping and $20 flat rate for anywhere else in the world.
+  TAX: 
+  We collect sales tax for residents of the state of Washington.
+  
+
+  Mailing List
+  Customers want to know the latest information, and if you have specials. They don't want to be spammed daily with stuff, but monthly updates would be appreciated by customers. 
+  
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
-      <h3>[Page 2]</h3>
+      <h3>Contact</h3>
       <p>
-        [Written copy for the Page 2 here]
+        emailto:duodocks@gmail.com
+
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
-      <h3>[Page 3]</h3>
+      <h3>Links and FAQ</h3>
       <p>
-        [Written copy for the Page 3 here]
+        $TBD get links for CrazyIfLiteral, Reddit and Facebook groups.
       </p>
       <p>Images for the Page 3</p>
         <img src="#" alt="image for page3">
