--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -210,7 +210,7 @@
       <li>Magnetic Cable 1.5M</li>
     </ul>
   <br><br>
-  <P>  People will want to perform the following activities:</P>
+  <p>  People will want to perform the following activities:</p>
   <ul>
     <li>Research our products (main page)</li>
     <li>Purchase our products (main page link to store)</li>
@@ -218,6 +218,7 @@
     <li>Find out more about what other people think about our products (FAQ / Reviews) </li>
     <li>Understand pricing and shipping costs/options (FAQ / Reviews)</li>
     <li>Unsub from our mailing list. (contact us)</li>
+  </ul>
   
   <p></p>
   <b>Links / FAQ</b>
