fix html and css

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -125,13 +125,13 @@
       <div class="sm-home">
         Home
       </div>
-      <div class="contact">
+      <div class="sm-contact">
         Contact Us
       </div>
-      <div class="links">
+      <div class="sm-review">
         Reviews
       </div>
-      <div class="faq">
+      <div class="sm-faq">
         FAQ
       </div>
 
