duodocks site plan wireframes

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -231,17 +231,19 @@
     </ul>
 
     <p>Images for the Home page</p>
-    <img src="images/all%203%20mag%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
-    <img src="images//white%20mag%20with%20slim%20pen%20dock%20and%20duo%20at%2045%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
-    <img src="images/black%20mag%20profile%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/white%20mag%20with%20slim%20pen%20dock%20and%20duo%20profile%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
-    <img src="images/marble%20mag%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/all%203%20mag%20back%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
-    <img src="images/black%20usb%20c%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/folded%20duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/white%20mag%202%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-    <img src="images/marble%20mag%20with%20slim%20pen%20dock%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
+    <div class="images">
+      <img src="images/all%203%20mag%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
+      <img src="images//white%20mag%20with%20slim%20pen%20dock%20and%20duo%20at%2045%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
+      <img src="images/black%20mag%20profile%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/white%20mag%20with%20slim%20pen%20dock%20and%20duo%20profile%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
+      <img src="images/marble%20mag%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/all%203%20mag%20back%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
+      <img src="images/black%20usb%20c%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/folded%20duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/white%20mag%202%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/marble%20mag%20with%20slim%20pen%20dock%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
+    </div>    
     
     <!-- Contact Page -->
     <h3>Contact</h3>
@@ -252,9 +254,12 @@
     <p>duodocks@gmail.com</p>
     <p>Mailing List link</p>
     <p>Images for the Page 2</p>
-    <img src="images/contact.svg" width="300" alt="image for page">
-    <img src="images/DuoDock_v1_2.jpg" width=300 alt="black magnetic DuoDock">
-
+    <div class="images">
+      <img src="images/contact.svg" width="300" alt="image for page">
+      <img src="images/DuoDock_v1_2.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/Rylan.jpg" width=400 alt="Rylan">
+      <img src="images/Adam.jpg" width=400 alt="Adam">
+    </div>  
     <!-- Review Page -->
     <h3>Reviews</h3>
 
@@ -268,9 +273,10 @@
       <li><a href="https://www.facebook.com/search/posts/?q=DuoDock%20Surface%20Duo%20Central">Facebook Users Group Posts on DuoDock Development</a></li>
     </ul>
     <p>Images for Reviews</p>
-    <img src="images/reviews.svg" width="300" alt="image for page">
-    <img src="images/DuoDock_v1_3.jpg" width=300 alt="black magnetic DuoDock">
-
+    <div class="images">
+      <img src="images/reviews.svg" width="300" alt="image for page">
+      <img src="images/DuoDock_v1_3.jpg" width=300 alt="black magnetic DuoDock">
+    </div>
     <!-- FAQ -->
     <h3>FAQ</h3>
 
@@ -285,39 +291,37 @@
     <b>Tax</b>
     <p>We collect sales tax for residents of the state of Washington.</p>
 
-    <img src="images/questions.svg" width="300" alt="image for page">
-    <img src="images/DuoDock_v1.jpg" width=300 alt="black magnetic DuoDock">
-
+    <div class="images">
+      <img src="images/questions.svg" width="300" alt="image for page">
+      <img src="images/DuoDock_v1.jpg" width=300 alt="black magnetic DuoDock">
+    </div>
     <hr>
 
     <h2>
       Wireframes
     </h2>
-    <p>Create three wireframes for your site. One for each page and list them here</p>
+
 
     <h3>Home</h3>
-    <p>
-      [Any additional details about home that the wireframe does not make clear]
-    </p>
-    <img src="#" alt="home page wireframe">
+    <img src="images/HomePageWireFrame.png" alt="home page wireframe">
 
     <h3>Contact Us</h3>
     <p>
       [Any additional details about page 2 that the wireframe does not make clear]
     </p>
-    <img src="#" alt="contact page wireframe">
+    <img src="images/ContactPageWireFrame.png" alt="contact page wireframe">
 
     <h3>Reviews</h3>
     <p>
       [Any additional details about page 3 that the wireframe does not make clear]
     </p>
-    <img src="#" alt="review page wireframe">
+    <img src="images/ReviewsWireFrame.png" alt="review page wireframe">
 
     <h3>FAQ</h3>
     <p>
       [Any additional details about page 3 that the wireframe does not make clear]
     </p>
-    <img src="#" alt="FAQ page wireframe">
+    <img src="images/FAQWireFrame.png" alt="FAQ page wireframe">
 
   </main>
 </body>
