update to home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="wwr/images/DRY OAR.png">
   </div>
   <div class="wwr1">
-    <a href="wwr//week_7/index.html">White Water Rafting Website</a>
+    <a href="wwr/week_9/index.html">White Water Rafting Website</a>
   </div>
   <div class="wwr2">
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
