--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -303,25 +303,16 @@
 
 
     <h3>Home</h3>
-    <img src="images/HomePageWireFrame.png" alt="home page wireframe">
+    <img class = "wireframe" src="images/HomePageWireFrame.png" alt="home page wireframe">
 
     <h3>Contact Us</h3>
-    <p>
-      [Any additional details about page 2 that the wireframe does not make clear]
-    </p>
-    <img src="images/ContactPageWireFrame.png" alt="contact page wireframe">
+    <img class = "wireframe" src="images/ContactPageWireFrame.png" alt="contact page wireframe">
 
     <h3>Reviews</h3>
-    <p>
-      [Any additional details about page 3 that the wireframe does not make clear]
-    </p>
-    <img src="images/ReviewsWireFrame.png" alt="review page wireframe">
+    <img class = "wireframe" src="images/ReviewsWireFrame.png" alt="review page wireframe">
 
     <h3>FAQ</h3>
-    <p>
-      [Any additional details about page 3 that the wireframe does not make clear]
-    </p>
-    <img src="images/FAQWireFrame.png" alt="FAQ page wireframe">
+    <img class = "wireframe" src="images/FAQWireFrame.png" alt="FAQ page wireframe">
 
   </main>
 </body>
