--- a/wwr/week_9/contactus.html
+++ b/wwr/week_9/contactus.html
@@ -15,6 +15,8 @@
             padding: 1em;
             border: 1px solid #CCC;
             border-radius: 1em;
+            box-shadow: 5px 5px 10px #6f7364;
+            margin-top: 25px;
             }
 
             ul {
@@ -32,6 +34,7 @@
             display: inline-block;
             width: 90px;
             text-align: right;
+            
             }
 
             input,
@@ -43,23 +46,28 @@
             /* Uniform text field size */
             width: 300px;
             box-sizing: border-box;
+            box-shadow: 5px 5px 10px #6f7364;
+    
 
             /* Match form field borders */
             border: 1px solid #999;
+            box-shadow: 5px 5px 10px #6f7364;
             }
 
             input:focus,
             textarea:focus {
             /* Additional highlight for focused elements */
             border-color: #000;
+            box-shadow: 5px 5px 10px #6f7364;
             }
 
             textarea {
             /* Align multiline text fields with their labels */
             vertical-align: top;
-
+            box-shadow: 5px 5px 10px #6f7364;
+            resize: none;
             /* Provide space to type some text */
-            height: 5em;
+            height: 7em;
             }
 
             .button {
@@ -71,6 +79,7 @@
             /* This extra margin represent roughly the same space as the space
                 between the labels and their text fields */
             margin-left: .5em;
+            margin-top: 20px;
             }
 
             #feedback {
@@ -79,7 +88,7 @@
                 top: 0;
                 left: 0;
                 right: 0;
-                padding: .5em;
+                padding: 0.5em;
                 /* make this element invisible until we are ready for it */
                 display: none;       
             }
