--- a/project/faq.html
+++ b/project/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DuoDocks Contact Us</title>
+    <title>DuoDocks FAQ</title>
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -20,31 +20,35 @@
 <body>
     <div id="content">
         <div id="header"></div>
-        
-        <div id="main_contact">
+        <div id="main_faq">
             <div id="column_1">
-                <img id="contact_icon" src="images/contact.svg" alt="envelope icon">
-                <h2>Contact us!</h2>
-                <p id="contact_info">insert contact info here.</p>
+                <img id="questions_icon" src="images/questions.svg" alt="question icon">
+                <h2>You've got questions?<br>We've got answers!</h2>
+                <p id="question_info">insert question info here.</p>
+                <h2>Didn't answer your question?<br>Email us!</h2>
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
             <div id="divider_bar"></div>
             <div id="column_3">
-                <h2>About DuoDocks</h2>
-                <p>Insert text here.</p>
-                <h2>About Rylan</h2>
-                <p>Insert text here.</p>
-                <h2>About Adam</h2>
-                <p>Insert text here.</p>
+                <p>Insert question here.</p>
+                <p>Insert question here.</p>
+                <p>Insert question here.</p>
+                <p>Insert question here.</p>
+                <p>Insert question here.</p>
+                <p>Insert question here.</p>
             </div>
             <div id="column_4">
-                <img id="rylan" src="images/Rylan.jpg" alt="Rylan">
-                <img id="adam" src="images/Adam.jpg" alt="Adam">
+                <p>Insert answer here.</p>
+                <p>Insert answer here.</p>
+                <p>Insert answer here.</p>
+                <p>Insert answer here.</p>
+                <p>Insert answer here.</p>
+                <p>Insert answer here.</p>
             </div>
 
         </div>
-
-
+ 
+        
 
         <div id="footer"></div>
     </div>
