--- a/project/faq.html
+++ b/project/faq.html
@@ -24,26 +24,22 @@
             <div id="column_1">
                 <img id="questions_icon" src="images/questions.svg" alt="question icon">
                 <h2>You've got questions?<br>We've got answers!</h2>
-                <p id="question_info">insert question info here.</p>
+                <p id="question_info">So we know that you want to make informed decisions. We do too! Here's a collection of the most common questions we get.</p>
                 <h2>Didn't answer your question?<br>Email us!</h2>
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
             <div id="divider_bar"></div>
             <div id="column_3">
-                <p>Insert question here.</p>
-                <p>Insert question here.</p>
-                <p>Insert question here.</p>
-                <p>Insert question here.</p>
-                <p>Insert question here.</p>
-                <p>Insert question here.</p>
+                <p>Where do you ship? How Much Does it cost?</p>
+                <p>Do you charge US Sales Tax?</p>
+                <p>Do you charge EU VAT</p>
             </div>
             <div id="column_4">
-                <p>Insert answer here.</p>
-                <p>Insert answer here.</p>
-                <p>Insert answer here.</p>
-                <p>Insert answer here.</p>
-                <p>Insert answer here.</p>
-                <p>Insert answer here.</p>
+                <p>We ship everywhere in the world via Shippo. US shipping is a flat rate of US $5.00. International shipping is a flat rate of US $20.00.</p>
+                <p>If you are a state of Washington resident, we charge sales tax. </p>
+                <p>We don't charge the EU VAT, but you may be required to pay it when it arrives at your location, and it has been held at the local Post Office. 
+                    We have had people not get notified that they have a package waiting at their Post Office. You should get tracking information from Shippo, 
+                    and it would indicate that it is in this held state.</p>
             </div>
 
         </div>
