--- a/project/footer.html
+++ b/project/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <h3>DuoDocks &copy; 2022 - Adam Ulrich</h3>
-    <h3><a href="contact_us.html">Contact Us</a></h3>
+    <h3><a href="contact_us.html">CONTACT US</a></h3>
     <h3><a href="reviews.html">REVIEWS</a></h3>
     <h3><a href="faq.html">FAQ</a></h3>
     
