--- a/project/index.html
+++ b/project/index.html
@@ -54,9 +54,15 @@
                 <h2>Latest News</h2>
                 <p>We are happy to begin shipping the DuoDock 2 for the Surface Duo 2! 
                     We iterated for 6 months to provide a stable dock for your Duo 2 that we are proud to 
-                    sell.
-                    
+                    sell.                   
                 </p>
+
+                <h2>What is the DuoDock?</h2>
+                <p>The DuoDock is a bespoke product, design exclusively to work with the Microsoft Surface Duo and Surface Duo 2.
+                    It is the only dock/charging stand on the market designed to fast charge your Duo, while allowing you to interact
+                    with it at the perfect angle. Its thoughtful design supports all the various configurations of bumpers and covers,
+                    without buying anything additional. Small touches include: notches for proper alignment, proper height for swipe
+                    gestures, and storage for your pen.</p>
             </div>
             <div id="products">
                 <h2>Products</h2>
