--- a/project/reviews.html
+++ b/project/reviews.html
@@ -22,19 +22,20 @@
         <div id="header"></div>
         <div id="main_contact">
             <div id="column_1">
-                <img id="contact_icon" src="images/contact.svg" alt="envelope icon">
-                <h2>Contact us!</h2>
-                <p id="contact_info">insert contact info here.</p>
-                <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
+                <img id="review_icon" src="images/review_icon.svg" alt="envelope icon">
+                <h2>Reviews</h2>
+                <p>
+                </p>
+
             </div>
             <div id="divider_bar"></div>
             <div id="column_3">
                 <h2>ScaryifLiteral Review</h2>
-                <p>Insert text here.</p>
-                <h2>ScaryifLiteral Review 2</h2>
-                <p>Insert text here.</p>
+                <p>ScaryifLiteral is a youtube reviewer of technology, and has a particular passion around next generation foldable phones. In this review, he speaks specifically about the DuoDock v1.</p>
+                <h2>ScaryifLiteral Best Accessories for the Surface Duo</h2>
+                <p>In this video, ScaryifLiteral lists the DuoDock amongst the best accessories for the Surface Duo.</p>
                 <h2>Social Media Group Links</h2>
-                <img id="social_media_icon" src="images/reviews.svg" alt="review icon">
+                <img id="social_media_icon" src="images/social_media.svg" alt="review icon">
             </div>
             <div id="column_4">
                 <iframe id="scary_review_2" width="560" height="315" src="https://www.youtube.com/embed/HZNk0m_k6Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
