--- a/project/index.html
+++ b/project/index.html
@@ -23,17 +23,47 @@
             case 1:
                 //duo2
                 img.src="images/DuoDock_2.jpg"
-                text_block.innerHTML = "The DuoDock 2 for the Surface Duo 2. Supports Full PD100 charging, and video out through.";
+                text_block.innerHTML = "The DuoDock 2 for the Surface Duo 2. \
+                <ul>\
+                    <li>Full PD100 charging (5V @ 20Amp)\
+                    <li>Full USB 3.1 Connectivity supporting video and data.</li>\
+                    <li>Multiple colors available</li>\
+                    <li>Supports all bumper/cover configurations.</li>\
+                    <li>Great design.</li>\
+                    <li>Stable and non-slip.</li>\
+                    <li>Solid/Substantial, weighing 4oz</li>\
+                </ul>";
                 break;
             case 2:
                 //duo1 mag
                 img.src="images/black mag profile (Medium).jpg"
-                text_block.innerHTML = "The Magnetic DuoDock for the Surface Duo. Supports Full PD100 charging, and video out.";
+                text_block.innerHTML = "The Magnetic DuoDock for the Surface Duo. \
+                <ul>\
+                    <li>Full PD100 charging (5V @ 20Amp)\
+                    <li>24 USB 3.1 Magnetic connector included</li>\
+                    <li>Full USB 3.1 Connectivity supporting video and data.</li>\
+                    <li>Includes Pen storage.</li>\
+                    <li>Multiple colors available</li>\
+                    <li>Supports all bumper/cover configurations.</li>\
+                    <li>Great design.</li>\
+                    <li>Stable and non-slip.</li>\
+                    <li>Solid/Substantial, weighing 4oz</li>\
+                </ul>";
                 break;
             case 3:
                 //duo1 usb-c
                 img.src="images/white usb c (Medium).jpg"
-                text_block.innerHTML = "The original USB-C DuoDock for the Surface Duo. Supports Full PD100 charging, and video out.";
+                text_block.innerHTML = "The original USB-C DuoDock for the Surface Duo. \
+                <ul>\
+                    <li>Full PD100 charging (5V @ 20Amp)\
+                    <li>Full USB 3.1 Connectivity supporting video and data.</li>\
+                    <li>Includes Pen storage.</li>\
+                    <li>Multiple colors available</li>\
+                    <li>Supports all bumper/cover configurations.</li>\
+                    <li>Great design.</li>\
+                    <li>Stable and non-slip.</li>\
+                    <li>Solid/Substantial, weighing 4oz</li>\
+                </ul>";
                 break;
             case 4:
                 //mag cable
